verif/test/deca/codegen/invalid/loops/loop-inversed-redefinition-verif.res
src/test/deca/codegen/invalid/loops/loop-inversed-redefinition.deca:15:12: no viable alternative at input 'a'
